# monero

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
contrib/guix/: guix-build  manifest.scm
docs/: CONTRIBUTING.md
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in
src/async/: mutex.h  parent_reference_tasking_system.h  threadpool.cpp  threadpool.h  token_queue.h
src/blockchain_db/: blockchain_db.cpp  blockchain_db.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  blockchain_ancestry.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_unspent_preringct.cpp
src/carrot_core/: CMakeLists.txt  account_secrets.h  carrot_enote_scan.cpp  config.h  device.h  device_ram_borrowed.cpp  device_ram_borrowed.h  enote_utils.cpp  enote_utils.h  hash_functions.cpp  output_set_finalization.h  payment_proposal.cpp  payment_proposal.h  transcript_fixed.h
src/carrot_impl/: CMakeLists.txt  address_device.h  address_device_hierarchies.cpp  address_device_hierarchies.h  address_device_ram_borrowed.cpp  address_device_ram_borrowed.h  address_utils.cpp  address_utils.h  carrot_chain_serialization.h  carrot_offchain_serialization.h  carrot_tx_builder_utils.cpp  carrot_tx_builder_utils.h  carrot_tx_format_utils.cpp  enote_store.h  format_utils.cpp  format_utils.h  input_selection.cpp  input_selection.h  input_selection.inl  key_image_device.h  key_image_device_composed.cpp  key_image_device_composed.h  key_image_device_precomputed.cpp  key_image_device_precomputed.h  knowledge_proof_device_ram_borrowed.cpp  knowledge_proof_device_ram_borrowed.h  knowledge_proofs.cpp  knowledge_proofs.h  legacy_enote_types.cpp  legacy_enote_types.h  multi_tx_proposal_utils.cpp  multi_tx_proposal_utils.h  output_opening_types.cpp  output_opening_types.h  spend_device.h  spend_device_ram_borrowed.cpp  spend_device_ram_borrowed.h  subaddress_index.h  subaddress_map.h  subaddress_map_legacy.cpp  (+8 more)
src/checkpoints/: checkpoints.cpp
src/common/: CMakeLists.txt  apply_permutation.h  base32_monero.h  container_helpers.h  recursive_shared_mutex.cpp  recursive_shared_mutex.h  rpc_client.h  variant.h  work_queue.h  work_queue.inl
src/crypto/: CMakeLists.txt  c_threads.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  generators.cpp  generators.h
src/cryptonote_basic/: account.h  account_generators.h  cryptonote_basic.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  miner.cpp  subaddress_index.h  tx_extra.h
src/cryptonote_core/: blockchain.cpp  blockchain.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  tx_pool.cpp  tx_pool.h  tx_verification_utils.cpp  tx_verification_utils.h
src/cryptonote_protocol/: cryptonote_protocol_defs.cpp  cryptonote_protocol_defs.h  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  levin_notify.cpp  levin_notify.h  request_manager.cpp
src/daemon/: command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  daemon.cpp  main.cpp  rpc.h  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: windows_daemonizer.inl
src/debug_utilities/: object_sizes.cpp
src/device/: device_cold.hpp  device_io_hid.cpp  device_io_hid.hpp  device_io_tcp.cpp  device_ledger.cpp
src/device_trezor/: device_trezor_base.hpp
src/fcmp_pp/: CMakeLists.txt  branch_blinds_cache.cpp  branch_blinds_cache.h  curve_trees.cpp  curve_trees.h  fcmp_pp_crypto.cpp  fcmp_pp_serialization.h  fcmp_pp_types.cpp  fcmp_pp_types.h  prove.cpp  prove.h  tower_cycle.cpp  tower_cycle.h  tree_cache.cpp  tree_cache.h  tree_sync.h
src/fcmp_pp/fcmp_pp_rust/: CMakeLists.txt  Cargo.toml  fcmp++.h
src/fcmp_pp/fcmp_pp_rust/src/: lib.rs
src/hardforks/: hardforks.cpp
src/multisig/: CMakeLists.txt  multisig.cpp  multisig.h  multisig_account.cpp  multisig_account.h  multisig_account_kex_impl.cpp  multisig_kex_msg.cpp  multisig_kex_msg.h
src/net/: CMakeLists.txt  i2p_address.cpp  i2p_address.h  multihost_client.cpp  multihost_client.h  (+2 more)
tests/: CMakeLists.txt
(+444 files in other folders)
