[package]
name = "fcmp_pp_rust"
version = "0.0.0"
edition = "2021"

[lib]
name = "fcmp_pp_rust"
crate-type = ["staticlib"]

[dependencies]
rand_core = { version = "0.6", default-features = false }

multiexp = "0.4"
ciphersuite = { version = "0.4.2", features = ["ed25519"] }
dalek-ff-group = "0.5.0"
helioselene = { git = "https://github.com/monero-oxide/monero-oxide", rev = "0e438aed2cce5c0ab8a935916c1a89bb0077f97f" }

generalized-bulletproofs = { git = "https://github.com/monero-oxide/monero-oxide", rev = "0e438aed2cce5c0ab8a935916c1a89bb0077f97f" }
ec-divisors = { git = "https://github.com/monero-oxide/monero-oxide", rev = "0e438aed2cce5c0ab8a935916c1a89bb0077f97f", features = ["ed25519"] }
full-chain-membership-proofs = { git = "https://github.com/monero-oxide/monero-oxide", rev = "0e438aed2cce5c0ab8a935916c1a89bb0077f97f" }

monero-fcmp-plus-plus-generators = { git = "https://github.com/monero-oxide/monero-oxide", rev = "0e438aed2cce5c0ab8a935916c1a89bb0077f97f" }
monero-fcmp-plus-plus = { git = "https://github.com/monero-oxide/monero-oxide", rev = "0e438aed2cce5c0ab8a935916c1a89bb0077f97f" }

monero-ed25519 = { git = "https://github.com/monero-oxide/monero-oxide", rev = "0e438aed2cce5c0ab8a935916c1a89bb0077f97f" }
std-shims = { version = "0.1.5", default-features = false }

[patch.crates-io]
crypto-bigint = { git = "https://github.com/kayabaNerve/crypto-bigint", branch = "c-repr" }

[profile.dev]
lto = "off"
panic = "abort"
overflow-checks = true

[profile.release]
lto = "off"
panic = "abort"
overflow-checks = true

[profile.dev.package]
subtle = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }

ff = { opt-level = 3 }
group = { opt-level = 3 }

crypto-bigint = { opt-level = 3 }
dalek-ff-group = { opt-level = 3 }
helioselene = { opt-level = 3 }

multiexp = { opt-level = 3 }

ec-divisors = { opt-level = 3 }
generalized-bulletproofs = { opt-level = 3 }
generalized-bulletproofs-circuit-abstraction = { opt-level = 3 }
generalized-bulletproofs-ec-gadgets = { opt-level = 3 }
full-chain-membership-proofs = { opt-level = 3 }

monero-fcmp-plus-plus = { opt-level = 3 }
