[package]
name = "fcmp_pp_rust"
version = "0.0.0"
edition = "2021"

[lib]
name = "fcmp_pp_rust"
crate-type = ["staticlib"]

[dependencies]
rand_core = { version = "0.6", default-features = false }

multiexp = "0.4"
ciphersuite = { version = "0.4.2", features = ["ed25519"] }
dalek-ff-group = "0.4.4"
helioselene = { git = "https://github.com/kayabaNerve/monero-oxide", rev = "8aea6ded79f78fc6b1fe9c8ba6f1ad945dc5ce78" }

generalized-bulletproofs = { git = "https://github.com/kayabaNerve/monero-oxide", rev = "8aea6ded79f78fc6b1fe9c8ba6f1ad945dc5ce78" }
ec-divisors = { git = "https://github.com/kayabaNerve/monero-oxide", rev = "8aea6ded79f78fc6b1fe9c8ba6f1ad945dc5ce78", features = ["ed25519"] }
full-chain-membership-proofs = { git = "https://github.com/kayabaNerve/monero-oxide", rev = "8aea6ded79f78fc6b1fe9c8ba6f1ad945dc5ce78" }

monero-generators = { git = "https://github.com/kayabaNerve/monero-oxide", rev = "8aea6ded79f78fc6b1fe9c8ba6f1ad945dc5ce78" }
monero-fcmp-plus-plus = { git = "https://github.com/kayabaNerve/monero-oxide", rev = "8aea6ded79f78fc6b1fe9c8ba6f1ad945dc5ce78" }

[patch.crates-io]
crypto-bigint = { git = "https://github.com/kayabaNerve/crypto-bigint", branch = "c-repr" }

[profile.dev]
lto = "off"
panic = "abort"
overflow-checks = true

[profile.release]
lto = "off"
panic = "abort"
overflow-checks = true

[profile.dev.package]
subtle = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }

ff = { opt-level = 3 }
group = { opt-level = 3 }

crypto-bigint = { opt-level = 3 }
dalek-ff-group = { opt-level = 3 }
helioselene = { opt-level = 3 }

multiexp = { opt-level = 3 }

ec-divisors = { opt-level = 3 }
generalized-bulletproofs = { opt-level = 3 }
generalized-bulletproofs-circuit-abstraction = { opt-level = 3 }
generalized-bulletproofs-ec-gadgets = { opt-level = 3 }
full-chain-membership-proofs = { opt-level = 3 }

monero-fcmp-plus-plus = { opt-level = 3 }
